@@ -7,6 +7,7 @@ shady-KISS-skin History
 - Reduced fontsize of timerstart-timerstop in timersmenu if only 12 listitems are shown
 - Reactivated fadetimes
 - Deactivated shift- and fadetime in audiotracks (actually in this view not supported by skindesigner)
+- Enlarged fontsize of reruns in menudetetailepg if only 12 listitems are shown
 
 2016-02-12:
 - Fixed scaling of videowindow in weatherforecast
